--- a/sass/abstracts/_mixins.sass
+++ b/sass/abstracts/_mixins.sass
@@ -20,7 +20,7 @@
   color: var.$white
   position: relative
     
-@mixin flex-center($flex-center)
+@mixin flex-center
     display: flex
     justify-content: center
     align-items: center
