--- a/sass/page/_contact.sass
+++ b/sass/page/_contact.sass
@@ -7,7 +7,7 @@
   flex-direction: column
   gap: 1rem
   margin: fct.rem(40) auto
-  padding: fct.rem(20)
+  padding: fct.rem(30) fct.rem(60)
   border: 2px solid var.$dark-green
   border-radius: fct.rem(10)
   width: 80%
@@ -32,7 +32,8 @@
 
   &__form
     display: flex
-    flex-wrap: wrap
+    flex-direction: column
+    //flex-wrap: wrap
     justify-content: center
     margin-bottom: fct.rem(20)
 
