--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -20,9 +20,7 @@
         <label for="password">Password</label>
         <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
 
-        <input type="hidden" name="_csrf_token"
-               value="{{ csrf_token('authenticate') }}"
-        >
+        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
         <div class="checkbox mb-3">
             <input type="checkbox" name="_remember_me" id="_remember_me">
