--- a/templates/admin/article/list.html.twig
+++ b/templates/admin/article/list.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin_base.html.twig' %}
 
 {% block title %}Liste des articles | Code by Aurore{% endblock %}
 
