--- a/sass/abstracts/_variables.sass
+++ b/sass/abstracts/_variables.sass
@@ -22,3 +22,6 @@ $background-color: $white
 $text-color: #2b4743
 $font-family: "Montserrat", sans-serif
 
+$sidebar-bg: #2b4743
+$content-bg: #efe4d5
+$active-link-color: #ea638c
