--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,11 +1,7 @@
 @use "base/reset-meyers"
 @use "base/reset-custom"
 
-@use "layout/header"
-@use "layout/footer"
-
-@use "page/about"
-@use "page/blog"
-@use "page/contact"
+@use "main/index" as mainIndex
+@use "admin/index" as adminIndex
 
 @use "components/button"
