--- a/templates/admin/article/list.html.twig
+++ b/templates/admin/article/list.html.twig
@@ -9,7 +9,7 @@
         <p>
             <a class="button--secondary" href="{{ path('article.new')}}">Créer un article</a>
         </p>
-        <table class="table">
+        <table class="list">
             <thead>
                 <tr>
                     <th>Titre</th>
