--- a/sass/base/_reset-custom.sass
+++ b/sass/base/_reset-custom.sass
@@ -1,13 +1,18 @@
 @use "../abstracts/variables" as var
 
+*,
+*::before,
+*::after
+  margin: 0
+  padding: 0
+  box-sizing: border-box
+    
 body
     background-color: var.$background-color
     font-family: var.$font-family
     color: var.$text-color
     font-weight: 500
     font-size: var.$font-size-p
-    margin: 0
-    padding: 0
 
 h1, h2, h3, h4
     font-weight: bold
