--- a/templates/partials/_sidebar.html.twig
+++ b/templates/partials/_sidebar.html.twig
@@ -3,8 +3,8 @@
         <ul>
             <li><a href="{{ path('admin.dashboard') }}" class="active">Tableau de bord</a></li>
             <li><a href="{{ path('admin.articles') }}">Articles</a></li>
-            <li><a href="#">Catégories</a></li>
-            <li><a href="#">Tags</a></li>
+            <li><a href="{{ path('admin.categories.index') }}">Catégories</a>
+            <li><a href="{{ path('admin.tags.index') }}">Tags</a></li>
         </ul>
     </nav>
 </aside>
