add mailtrap and mongodb

--- a/templates/main/contact/index.html.twig
+++ b/templates/main/contact/index.html.twig
@@ -55,9 +55,7 @@
                 {{ form_errors(form.message) }}
             </div>
         </div>
-        <div class="contact__submit button">
-            {{ form_widget(form.submit) }}
-        </div>
+        <button class="button">Envoyer</button>
     </div>
 
     {{ form_end(form) }}
