messages stocked in mongodb

--- a/templates/emails/contact.html.twig
+++ b/templates/emails/contact.html.twig
@@ -1,5 +1,6 @@
 <h2>Vous avez reçu un nouveau message</h2>
-<p><strong>Nom :</strong> {{ message.name }}</p>
+<p><strong>Nom :</strong> {{ message.lastname }}</p>
+<p><strong>Nom :</strong> {{ message.firstname }}</p>
 <p><strong>Email :</strong> {{ message.email }}</p>
 {% if message.phone %}
 <p><strong>Téléphone :</strong> {{ message.phone }}</p>
