--- a/templates/admin/messages/index.html.twig
+++ b/templates/admin/messages/index.html.twig
@@ -1,23 +1,36 @@
 {% extends 'admin_base.html.twig' %}
+
+{% block title %}Gestion des messages | Code by Aurore{% endblock %}
+
+{% block body %}
 <h1>Messages reçus</h1>
 
 <table>
     <thead>
         <tr>
+            <th>Date</th>
             <th>Nom</th>
+            <th>Prénom</th>
+            <th>Téléphone</th>
             <th>Email</th>
+            <th>Objet</th>
             <th>Message</th>
         </tr>
     </thead>
     <tbody>
         {% for message in messages %}
             <tr>
-                <td>{{ message.name }}</td>
+                <td>{{ message.createdAt | date("Y-m-d") }}</td>
+                <td>{{ message.lastname }}</td>
+                <td>{{ message.firstname }}</td>
+                <td>{{ message.phone }}</td>
                 <td>{{ message.email }}</td>
-                <td>{{ message.message }}</td>
+                <td>{{ message.subject }}</td>
+                <td>{{ message.content }}</td>
             </tr>
         {% endfor %}
     </tbody>
 </table>
-
 {% endblock %}
+
+
