--- a/sass/main/_contact.sass
+++ b/sass/main/_contact.sass
@@ -61,7 +61,7 @@
             border-radius: 0.5rem
             background-color: #fff
             transition: border-color 0.3s ease, box-shadow 0.3s ease
-            color: var.$light-green
+            color: var.$dark-green
 
             &:focus
                 border-color: var.$light-green
