--- a/templates/main/contact/index.html.twig
+++ b/templates/main/contact/index.html.twig
@@ -58,7 +58,7 @@
                 {{ form_errors(form.content) }}
             </div>
         </div>
-        <button type="submit" class="button">Envoyer</button>
+        <button type="submit" class="button--dark-green">Envoyer</button>
     </div>
 
     {{ form_end(form) }}
