--- a/sass/components/_button.sass
+++ b/sass/components/_button.sass
@@ -6,6 +6,7 @@
     border: solid 2px var.$white
     color: var.$white
     border-radius: 0.5rem
+    margin-top: 0.5rem
     padding: 0.5rem 0.75rem
     display: inline-flex
     align-items: center
@@ -16,13 +17,23 @@
         color: var.$light-green
         
 
-    &--secondary
+    &--light-green
         @extend .button
         border: solid 2px var.$light-green
+        color: var.$light-green
         background-color: transparent
         &:hover
-            border: solid 2px var.$white
+            background-color: var.$light-green
+            color: var.$dark-green
 
+    &--dark-green
+        @extend .button
+        border: solid 2px var.$dark-green
+        color: var.$dark-green
+        background-color: transparent
+        &:hover
+            background-color: var.$light-green
+            color: var.$dark-green
 
     &__icon
         width:1.25rem
@@ -30,3 +41,13 @@
 
     &__label
         @include mixin.font(0.75, $font-weight: 400)
+
+    &--delete
+        @extend .button
+        border: solid 2px var.$pink
+        color: var.$pink
+        background-color: transparent
+        &:hover
+            background-color: var.$pink
+            color: var.$white
+            border: var.$pink
