improved admin pages + fixed JS issue

--- a/templates/admin/article/list.html.twig
+++ b/templates/admin/article/list.html.twig
@@ -7,7 +7,7 @@
     <section>
         <h1>Liste des articles</h1>
         <p>
-            <a class="button--dark-green" href="{{ path('article.new')}}">Créer un article</a>
+            <a class="button--dark-green" href="{{ path('article.new')}}">+ Nouvel article</a>
         </p>
         <table class="table">
             <thead>
