--- a/templates/admin/category/index.html.twig
+++ b/templates/admin/category/index.html.twig
@@ -10,7 +10,7 @@
     <div class="category-list__flash category-list__flash--success">{{ message }}</div>
   {% endfor %}
 
-  <a href="{{ path('admin.categories.new') }}" class="button--dark-green">+ Ajouter une catégorie</a>
+  <a href="{{ path('admin.categories.new') }}" class="button--dark-green">+ Nouvelle catégorie</a>
 
   <table class="table">
     <thead>
