--- a/templates/admin/category/new.html.twig
+++ b/templates/admin/category/new.html.twig
@@ -3,19 +3,24 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block body %}
-<div class="category-form">
-  <h1 class="category-form__title">{{ title }}</h1>
+<div class="form">
+  <h1>{{ title }}</h1>
 
   {{ form_start(form, {'attr': {'class': 'category-form__form'}}) }}
-    <div class="category-form__group">
-      {{ form_label(form.name, null, {'label_attr': {'class': 'category-form__label'}}) }}
-      {{ form_widget(form.name, {'attr': {'class': 'category-form__input'}}) }}
+    <div>
+      {{ form_label(form.name, null, {'label_attr': {'class': 'label'}}) }}
+      {{ form_widget(form.name, {'attr': {'class': 'input'}}) }}
       {{ form_errors(form.name) }}
+    </div>
+    <div>
+      {{ form_label(form.slug, null, {'label_attr': {'class': 'label'}}) }}
+      {{ form_widget(form.slug, {'attr': {'class': 'input'}}) }}
+      {{ form_errors(form.slug) }}
     </div>
 
     <div class="category-form__actions">
-      <button type="submit" class="category-form__button category-form__button--submit">Enregistrer</button>
-      <a href="{{ path('admin.categories.index') }}" class="category-form__button category-form__button--back">Retour</a>
+      <button type="submit" class="button--dark-green">Enregistrer</button>
+      <a href="{{ path('admin.categories.index') }}" class="button--light-green">Retour</a>
     </div>
   {{ form_end(form) }}
 </div>
