--- a/templates/admin_base.html.twig
+++ b/templates/admin_base.html.twig
@@ -67,6 +67,6 @@
                 </ul>
             </div>
         </footer>
-        <script src="{{ asset('js/navbar.js') }}"></script>
+        <script src="{{ asset('build/app.js') }}"></script>
     </body>
 </html>
