--- a/templates/admin/article/new.html.twig
+++ b/templates/admin/article/new.html.twig
@@ -2,19 +2,53 @@
 
 {% block body %}
    <div class="container">
-      <h2>Ajouter un article</h2>
+      <h2>Nouvel article</h2>
 
       {{ include('partials/_flash_messages.html.twig') }}
 
-      <form method="post" action="{{ path('article.new') }}">
+      <form class="form" method="post" action="{{ path('article.new') }}">
 
          {{ form_start(form) }}
-             {{ form_row(form.title) }}
-             {{ form_row(form.slug) }}
-             {{ form_row(form.content) }}
-             {{ form_row(form.category) }}
-             {{ form_row(form.published_at) }}
-             {{ form_row(form.save, { 'label': 'Créer l\'article' }) }}
+
+             <div class="tag-form__group">
+               {{ form_label(form.title, null, {'label_attr': {'class': 'label'}}) }}
+               {{ form_widget(form.title, {'attr': {'class': 'input'}}) }}
+               {{ form_errors(form.title) }}
+             </div>
+             <div>
+               {{ form_label(form.slug, null, {'label_attr': {'class': 'label'}}) }}
+               {{ form_widget(form.slug, {'attr': {'class': 'input'}}) }}
+               {{ form_errors(form.slug) }}
+             </div>
+             <div class="tag-form__group">
+               {{ form_label(form.created_at, null, {'label_attr': {'class': 'label'}}) }}
+               {{ form_widget(form.created_at, {'attr': {'class': 'input flatpickr-date'}}) }}
+               {{ form_errors(form.created_at) }}
+             </div>
+             <div>
+               {{ form_label(form.category, null, {'label_attr': {'class': 'label'}}) }}
+               {{ form_widget(form.category, {'attr': {'class': 'select'}}) }}
+               {{ form_errors(form.category) }}
+             </div>
+             <div class="tag-form__group">
+               {{ form_label(form.published_at, null, {'label_attr': {'class': 'label'}}) }}
+               {{ form_widget(form.published_at, {'attr': {'class': 'input flatpickr-date'}}) }}
+               {{ form_errors(form.published_at) }}
+             </div>
+             <div class="tag-form__group">
+               {{ form_label(form.metaDescription, null, {'label_attr': {'class': 'label'}}) }}
+               {{ form_widget(form.metaDescription, {'attr': {'class': 'input'}}) }}
+               {{ form_errors(form.metaDescription) }}
+             </div>
+             <div class="tag-form__group">
+               {{ form_label(form.content, null, {'label_attr': {'class': 'label'}}) }}
+               {{ form_widget(form.content, {'attr': {'class': 'textarea'}}) }}
+               {{ form_errors(form.content) }}
+             </div>
+             {{ form_row(form.save, {
+               'label': 'Créer l\'article',
+               'attr': {'class': 'button--dark-green'}
+             }) }}
              {{ form_row(form._token) }}
 
          {{ form_end(form) }}
