--- a/templates/admin/messages/index.html.twig
+++ b/templates/admin/messages/index.html.twig
@@ -26,7 +26,7 @@
                 <td>{{ message.phone }}</td>
                 <td>{{ message.email }}</td>
                 <td>{{ message.subject }}</td>
-                <td>{{ message.content }}</td>
+                <td><a class="button--light-green" href="{{ path('admin.message.show', { id: message.id }) }}">Voir le message</a></td>
             </tr>
         {% endfor %}
     </tbody>
