--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -15,10 +15,14 @@
         {% endif %}
 
         <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <label for="username">Username</label>
-        <input type="text" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="username" required autofocus>
-        <label for="password">Password</label>
-        <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
+        <div>
+            <label for="username">Username</label>
+            <input type="text" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="username" required autofocus>
+        </div>
+        <div>
+            <label for="password">Password</label>
+            <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
+        </div>
 
         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
@@ -27,8 +31,8 @@
             <label for="_remember_me">Remember me</label>
         </div>
 
-        <button class="btn btn-lg btn-primary" type="submit">
-            Sign in
+        <button class="button--dark-green" type="submit">
+            Je me connecte
         </button>
     </form>
 {% endblock %}
