--- a/templates/main/about/index.html.twig
+++ b/templates/main/about/index.html.twig
@@ -10,7 +10,7 @@
       <p class="hero__description js-home-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque maxime ipsam dignissimos, similique quod sit sed nulla! Cum ad corporis ut voluptas tempore molestiae vero fuga ullam similique, neque natus.</p>
 
       <div class="hero__buttons">
-        <a class="hero__button-item button" href="/portfolio.html">
+        <a class="hero__button-item button" href="{{ asset('downloads/cv-aurore-le-perff.pdf') }}" download="public/downloads/cv-aurore-le-perff.pdf">
           <svg style="width: 20px;" class="button__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z"></path></svg>
           <span class="button__label">Télécharger mon CV</span>
         </a>
