--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -62,8 +62,9 @@ table {
 
 body {
   background-color: #efe4d5;
-  font-family: "Montserrat", sans-serif;
   color: #2b4743;
+  transition: background-color 0.3s, color 0.3s;
+  font-family: "Montserrat", sans-serif;
   font-weight: 500;
   font-size: 1rem;
 }
@@ -539,19 +540,19 @@ a {
     position: static;
     box-shadow: unset;
   }
-  .nav__menu .nav__menu--item {
+  .nav__menu--item {
     display: inline-block;
     border-top: 2px solid transparent;
     border-bottom: 2px solid transparent;
     line-height: 44px;
   }
-  .nav__menu .nav__menu--item:hover {
+  .nav__menu--item:hover {
     border-top: 3px solid #38d6c2;
     border-bottom: 3px solid #38d6c2;
     font-weight: 700;
     color: #2b4743;
   }
-  .nav__menu .nav__menu--item .nav__menu--item a.active {
+  .nav__menu--item .nav__menu--item a.active {
     border-top: 3px solid #38d6c2;
     border-bottom: 3px solid #38d6c2;
     font-weight: 700;
