--- a/sass/abstracts/_variables.sass
+++ b/sass/abstracts/_variables.sass
@@ -18,10 +18,11 @@ $font-size-mini: 0.75rem
 
 $primary-color: #38d6c2
 $secondary-color: #ea638c
-$background-color: $white
+$background-color: #efe4d5
 $text-color: #2b4743
 $font-family: "Montserrat", sans-serif
 
 $sidebar-bg: #2b4743
 $content-bg: #efe4d5
 $active-link-color: #ea638c
+
