--- a/sass/base/_reset-custom.sass
+++ b/sass/base/_reset-custom.sass
@@ -9,8 +9,9 @@
     
 body
     background-color: var.$background-color
-    font-family: var.$font-family
     color: var.$text-color
+    transition: background-color 0.3s, color 0.3s
+    font-family: var.$font-family
     font-weight: 500
     font-size: var.$font-size-p
 
