--- a/templates/admin/article/new.html.twig
+++ b/templates/admin/article/new.html.twig
@@ -22,7 +22,7 @@
              </div>
              <div class="tag-form__group">
                {{ form_label(form.created_at, null, {'label_attr': {'class': 'label'}}) }}
-               {{ form_widget(form.created_at, {'attr': {'class': 'input flatpickr-date'}}) }}
+               {{ form_widget(form.created_at, {'attr': {'class': 'input datepicker'}}) }}
                {{ form_errors(form.created_at) }}
              </div>
              <div>
@@ -32,7 +32,7 @@
              </div>
              <div class="tag-form__group">
                {{ form_label(form.published_at, null, {'label_attr': {'class': 'label'}}) }}
-               {{ form_widget(form.published_at, {'attr': {'class': 'input flatpickr-date'}}) }}
+               {{ form_widget(form.published_at, {'attr': {'class': 'input datepicker'}}) }}
                {{ form_errors(form.published_at) }}
              </div>
              <div class="tag-form__group">
