--- a/sass/main/_about.sass
+++ b/sass/main/_about.sass
@@ -75,7 +75,6 @@
         flex-direction: column
         justify-content: center
         align-items: center
-
     &__container-title
         @include mixin.font(1.8rem, 600)
         margin-bottom: fct.rem(35)
@@ -111,6 +110,7 @@
             font-size: fct.rem(16)
             color: var.$dark-green
             margin-bottom: fct.rem(15)
+            justify-content: start
             
         .js-home-project-tags-container
             display: flex
