--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -207,6 +207,7 @@ a {
   font-size: 1rem;
   color: #2b4743;
   margin-bottom: 0.9375rem;
+  justify-content: start;
 }
 .main__projects .js-home-project-tags-container {
   display: flex;
